--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 #spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults =false
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults =true
 #spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
