--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/roleplay
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 #spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults =true
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults =true
 #spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
